force-app/main/default/objects/Aggregator__c/Aggregator__c.object-meta.xml
<CustomObject>
    <label>Aggregator</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Aggregate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aggregator</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>