force-app/main/default/objects/Aggregator__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial</label>
    <referenceTo>Financial__c</referenceTo>
    <relationshipLabel>Aggregator</relationshipLabel>
    <relationshipName>Aggregator</relationshipName>
    <type>Lookup</type>
</CustomField>