force-app/main/default/objects/Aggregator__c/fields/Fixed_Expense__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Expense__c</fullName>
    <label>Fixed (Other) Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>