force-app/main/default/objects/Aggregator__c/fields/Labour_Expense__c.field-meta.xml
<CustomField>
    <fullName>Labour_Expense__c</fullName>
    <label>Labour Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>