force-app/main/default/objects/Aggregator__c/fields/Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Cost__c</fullName>
    <label>Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>