force-app/main/default/objects/Aggregator__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>TEXT( YEAR ( TODAY() ))</defaultValue>
    <label>Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Years</valueSetName>
    </valueSet>
</CustomField>